cambio de titulo chart-ddd

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Footer from '../componentes/astro/Footer.astro'
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="description" content="Infografia interactiva del manga de dandadan">
-		<title>Astro</title>
+		<title>chart-ddd</title>
 		<style is:global>
 			main canvas {
 				@apply min-h-72;
